--- a/Lennyouse/DataAccessLayer/Properties/Resources.resx
+++ b/Lennyouse/DataAccessLayer/Properties/Resources.resx
@@ -130,6 +130,6 @@
     <value>Server=RECODME-SCUNHA\SQLEXPRESS;Database=Lennyouse;Trusted_Connection=true;</value>
   </data>
   <data name="ConnetionString" xml:space="preserve">
-    <value>Server=RECODME-SCUNHA\SQLEXPRESS;Database=Lennyouse;Trusted_Connection=true;</value>
+    <value />
   </data>
 </root>
