--- a/Lennyouse/DataAccessLayer/Properties/Resources.resx
+++ b/Lennyouse/DataAccessLayer/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConnectionString" xml:space="preserve">
+    <value>Server=localhost\SQLEXPRESS;Database=Lennyouse;Trusted_Connection=true;</value>
+  </data>
   <data name="ConnectionStringCarlos" xml:space="preserve">
     <value>Server=RECODME-CGARCIA\SQLEXPRESS;Database=Lennyouse;Trusted_Connection=true;</value>
   </data>
@@ -128,8 +131,5 @@
   </data>
   <data name="ConnectionStringSofia" xml:space="preserve">
     <value>Server=RECODME-SCUNHA\SQLEXPRESS;Database=Lennyouse;Trusted_Connection=true;</value>
-  </data>
-  <data name="ConnetionString" xml:space="preserve">
-    <value>Server=localhost\SQLEXPRESS;Database=Lennyouse;Trusted_Connection=true;</value>
   </data>
 </root>
